# darlybot

./: .gitignore  LICENSE  README.md  build_exe.bat  config.example.json  main.py  pyproject.toml  requirements.txt  곡순서.csv
data/: default.csv  song_order.sample.csv  곡순서.csv
loppebot_bridge/: __init__.py  app.py  config_loader.py  djmax_controller.py  song_catalogue.py  webview_app.py  webview_js.py
scripts/: darlybot-userscript.js
src/darlybot/: __init__.py  __main__.py  app.py  controller.py  default_songs.py  input_controller.py  navigator.py  server.py  song_index.py  system_tray.py  tray.py  version_info.txt
src/darlybot/data/: 곡순서.csv
src/djmax_router/: __init__.py  csv_loader.py  djmax_control.py  main.py  server.py
src/rofebot_bridge/: __init__.py  __main__.py  catalog.py  input_sender.py  loader.py  models.py  planner.py  server.py  text_utils.py
tests/: test_default_songs.py  test_input_controller.py  test_loader.py  test_main.py  test_navigator.py  test_planner.py  test_server.py  test_song_index.py  utils.py
web/: rofebot-bridge.user.js
