[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darlybot"
version = "0.1.0"
description = "Local helper that connects Lopebot tiles to DJMAX RESPECT V."
readme = "README.md"
authors = [{name = "Darlybot Maintainers"}]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=9.0",
    "pynput>=1.7",
    "pygetwindow>=0.0.9",
    "pystray>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
darlybot = "darlybot.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
darlybot = [
    "data/곡순서.csv",
]
